// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MessagesList AJAX requests phone numbers 1`] = `
Object {
  "body": Array [
    Array [
      "2016-02-18T13:53:24.292177",
      "BAL",
      "In",
      "<span data-toggle=\\"tooltip\\" title=\\"Phone number: +5516994648080\\">m1</span>",
      "BAL",
      "Yes",
      "Ground",
    ],
    Array [
      "2016-02-18T13:53:24.292177",
      "BAL",
      "Out",
      "<span data-toggle=\\"tooltip\\" title=\\"Phone number: +5516994648080\\">m1</span>",
      "Your current balance is 273.0",
      "No",
      "Ground",
    ],
    Array [
      "2016-02-18T13:52:11.410646",
      "System",
      "In",
      "+5516991787541",
      "This SMS code is not recognized by SparkMeter.",
      "No",
      "Ground",
    ],
    Array [
      "2016-02-18T13:52:11.410646",
      "Successful payment",
      "Out",
      "<span data-toggle=\\"tooltip\\" title=\\"Phone number: +5516994648080\\">m1</span>",
      "Thank you for buying 65.0 of energy",
      "Yes",
      "Ground",
    ],
    Array [
      "2016-02-18T13:52:11.410646",
      "N/A",
      "In",
      "+5516991787542",
      "BADCODE",
      "No",
      "Ground",
    ],
  ],
  "footer": null,
  "header": Array [
    "Date",
    "Type",
    "In/Out",
    "To/From",
    "Message",
    "Processed",
    "Ground",
  ],
}
`;

exports[`MessagesList Message List CSV Export should work 1`] = `
Object {
  "body": Array [
    Array [
      "2016-02-18T13:53:24.292177",
      "BAL",
      "in",
      "m1",
      "+5516994648080",
      "BAL",
      "Yes",
      null,
      null,
      "command",
      "Ground",
    ],
    Array [
      "2016-02-18T13:53:24.292177",
      "BAL",
      "out",
      "m1",
      "+5516994648080",
      "Your current balance is 273.0",
      "No",
      null,
      null,
      "command",
      "Ground",
    ],
    Array [
      "2016-02-18T13:52:11.410646",
      "System",
      "in",
      null,
      "+5516991787541",
      "This SMS code is not recognized by SparkMeter.",
      "No",
      null,
      "wrong-code",
      "system",
      "Ground",
    ],
    Array [
      "2016-02-18T13:52:11.410646",
      "Successful payment",
      "out",
      "m1",
      "+5516994648080",
      "Thank you for buying 65.0 of energy",
      "Yes",
      "customer-credit-transaction-processed",
      null,
      "alert",
      "Ground",
    ],
    Array [
      "2016-02-18T13:52:11.410646",
      "N/A",
      "in",
      null,
      "+5516991787542",
      "BADCODE",
      "No",
      null,
      null,
      "unknown",
      "Ground",
    ],
  ],
  "footer": null,
  "header": Array [
    "Date",
    "Type",
    "In/Out",
    "Customer name",
    "Phone number",
    "Message",
    "Processed",
    "Event type",
    "Message Type",
    "Origin",
    "Ground",
  ],
}
`;

exports[`MessagesList Message List table title should appear 1`] = `"Message History on test-ground"`;
